--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="media-body">
                         <!-- <h2>Featured Family Member</h2> -->
                         <h3 class="mt-4">Who Killed Jeff Doby?</h3>
-                        In 1952 Jeff's family recieved news that there had been an accident.  Jeff was on his way home from fighting in World War II and at a stop in Bioloxi, Mississippi he became drunk and was accidently run over by a train.  He was dead at just 31 years old.  However, when an autopsy was done on him when his body came home, it was discovered that his body had bullets in it, and that his true cause of death was murder.  <br /> <br />
+                        In 1952 Jeff's family recieved news that there had been an accident.  Jeff was on his way home from fighting in World War II and at a stop in Bioloxi, Mississippi he became drunk.  His family was told that in his drunkenness he was accidently run over by a train.  He was dead at just 31 years old.  However, when an autopsy was peformed on him, it was discovered that his body had bullets in it.  His true cause of death was murder.  <br /> <br />
                         <p><a class="btn btn-secondary" href="#" role="button" style="background-color: #1cac89!important;">Read More
                                 &raquo;</a></p>
                     </div>
@@ -230,11 +230,7 @@
     </div>
     <!-- Footer Links -->
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
+    
 
 </footer>
 <!-- Footer -->
